--- a/Runner/Platforms/net/net40/net-40-x64-full.csproj
+++ b/Runner/Platforms/net/net40/net-40-x64-full.csproj
@@ -37,6 +37,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+   <PropertyGroup>
+    <DefineConstants>$(DefineConstants);NET40</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ManyConsole">
       <HintPath>..\..\..\..\packages\ManyConsole.0.4.2.17\lib\ManyConsole.dll</HintPath>
