Missed project updates

--- a/WhoTestsTheTesters/CoverageRunner/CoverageRunner.csproj
+++ b/WhoTestsTheTesters/CoverageRunner/CoverageRunner.csproj
@@ -1,110 +1,55 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC51B277-1B75-433D-99B4-F4EA2EC3A4B8}</ProjectGuid>
+    <TargetFrameworks>netcoreapp2.0;net45;</TargetFrameworks>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CoverageRunner</RootNamespace>
-    <AssemblyName>CoverageRunner</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
+  
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
+  
+  <ItemGroup Condition="'$(TargetFramework)'=='net45'">
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  <ItemGroup Condition="'$(TargetFramework)'=='netcore1.1'">
+    <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
   </ItemGroup>
-<ItemGroup>
-   <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-     <SpecificVersion>False</SpecificVersion>
-     <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-   </Reference>
- </ItemGroup>
+ <ItemGroup>
+  <PackageReference Include="Newtonsoft.Json" Version="10.0.*"  />
+</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Contrib\AnyUnit.Constraints\AnyUnit.Constraints.csproj">
-      <Project>{7251d9b8-dd2a-4dca-a568-c53772081ce5}</Project>
-      <Name>AnyUnit.Constraints</Name>
+   
     </ProjectReference>
     <ProjectReference Include="..\..\Contrib\AnyUnit.Style.FsUnit\AnyUnit.Style.FsUnit.fsproj">
-      <Project>{44c176a6-c439-4617-b880-f2f4e55f54f1}</Project>
-      <Name>AnyUnit.Style.FsUnit</Name>
+ 
     </ProjectReference>
     <ProjectReference Include="..\..\Contrib\AnyUnit.Style.Nunit\AnyUnit.Style.Nunit.csproj">
-      <Project>{dbd9fd82-e254-43b4-9d69-c398acefb45b}</Project>
-      <Name>AnyUnit.Style.Nunit</Name>
+ 
     </ProjectReference>
     <ProjectReference Include="..\..\Contrib\AnyUnit.Style.Xunit\AnyUnit.Style.Xunit.csproj">
-      <Project>{57504543-dc1d-4a8d-8e70-4464c296512c}</Project>
-      <Name>AnyUnit.Style.Xunit</Name>
+
     </ProjectReference>
     <ProjectReference Include="..\..\AnyUnit\AnyUnit.csproj">
-      <Project>{999019d5-60c5-4ce6-a070-28b197c44d2a}</Project>
-      <Name>AnyUnit</Name>
+   
     </ProjectReference>
     <ProjectReference Include="..\Tests\BasicTests\BasicTests.csproj">
-      <Project>{07944fc5-debb-478f-a464-ad62ca4dd7a0}</Project>
-      <Name>BasicTests</Name>
+   
     </ProjectReference>
     <ProjectReference Include="..\Tests\ConstraintsTests\ConstraintsTests.csproj">
-      <Project>{360dd182-dfd4-479e-b001-042413d2de02}</Project>
-      <Name>ConstraintsTests</Name>
+  
     </ProjectReference>
     <ProjectReference Include="..\ConventionTestProcessor\ConventionTestProcessor.csproj">
-      <Project>{5afb0620-f75f-45d6-b287-f1a2f1337db2}</Project>
-      <Name>ConventionTestProcessor</Name>
+  
     </ProjectReference>
     <ProjectReference Include="..\Tests\Style\FsUnitTests\FsUnitTests.fsproj">
-      <Project>{c5dfe8ac-6b2d-462d-af0a-086a13f6eaf7}</Project>
-      <Name>FsUnitTests</Name>
+ 
     </ProjectReference>
     <ProjectReference Include="..\Tests\Style\NunitTests\NunitTests.csproj">
-      <Project>{ba124f39-825d-49f1-b272-c3347e046800}</Project>
-      <Name>NunitTests</Name>
+
     </ProjectReference>
     <ProjectReference Include="..\Tests\Style\XunitTests\XunitTests.csproj">
-      <Project>{e63677ae-4e0b-4983-9c30-9e5506f56d28}</Project>
-      <Name>XunitTests</Name>
+ 
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
