--- a/Contrib/AnyUnit.Constraints/AnyUnit.Constraints.csproj
+++ b/Contrib/AnyUnit.Constraints/AnyUnit.Constraints.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;portable40-net40+sl5+win8+wp8</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;portable40-net40+sl5+win8+wpa81+wp8</TargetFrameworks>
 
    <Authors />
     <Copyright>Copyright 2013-2017 Jay Tuley</Copyright>
@@ -13,11 +13,11 @@
     <Version>1.0.0-alpha</Version>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wp8'">
+  <PropertyGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wpa81+wp8'">
      <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
      <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
-     <DefineConstants>$(DefineConstants);PORTABLE136</DefineConstants>
+     <TargetFrameworkProfile>Profile328</TargetFrameworkProfile>
+     <DefineConstants>$(DefineConstants);PORTABLE</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3'">
@@ -26,7 +26,7 @@
   </ItemGroup>
 
 
-  <ItemGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wp8'">
+  <ItemGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wpa81+wp8'">
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
